@@ -4,26 +4,32 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
+import com.sprint.otboo.weather.dto.data.PrecipitationDto;
+import com.sprint.otboo.weather.dto.data.TemperatureDto;
+import com.sprint.otboo.weather.dto.data.WeatherSummaryDto;
+import com.sprint.otboo.weather.dto.response.WeatherLocationResponse;
 import com.sprint.otboo.weather.entity.PrecipitationType;
 import com.sprint.otboo.weather.entity.SkyStatus;
-import com.sprint.otboo.weather.entity.WindStrength;
 import com.sprint.otboo.weather.entity.Weather;
 import com.sprint.otboo.weather.entity.WeatherLocation;
-import com.sprint.otboo.weather.integration.kma.KmaShortTermForecastClient;
+import com.sprint.otboo.weather.integration.kma.KmaRequestBuilder;
+import com.sprint.otboo.weather.integration.kma.client.KmaShortTermForecastClient;
+import com.sprint.otboo.weather.integration.kma.dto.KmaForecastItem;
 import com.sprint.otboo.weather.integration.kma.dto.KmaForecastResponse;
+import com.sprint.otboo.weather.mapper.KmaForecastAssembler;
 import com.sprint.otboo.weather.mapper.KmaForecastMapper;
+import com.sprint.otboo.weather.mapper.WeatherMapper;
+import com.sprint.otboo.weather.repository.WeatherLocationRepository;
 import com.sprint.otboo.weather.repository.WeatherRepository;
-import java.math.BigDecimal;
 import java.time.Instant;
-import java.util.Arrays;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -33,127 +39,125 @@ import org.mockito.junit.jupiter.MockitoExtension;
 class WeatherServiceTest {
 
     @Mock private WeatherLocationQueryService locationQueryService;
-    @Mock private KmaShortTermForecastClient forecastClient;
-    @Mock private KmaForecastMapper forecastMapper;
+    @Mock private WeatherLocationRepository locationRepository;
+    @Mock private KmaRequestBuilder kmaRequestBuilder;
+    @Mock private KmaShortTermForecastClient kmaClient;
+    @Mock private KmaForecastAssembler kmaAssembler;
     @Mock private WeatherRepository weatherRepository;
+    @Mock private WeatherMapper weatherMapper;
 
     @InjectMocks
     private WeatherServiceImpl weatherService;
 
-    @Captor
-    private ArgumentCaptor<Weather> weatherCaptor;
-
     @Test
-    void 위경도_입력시_위치조회_예보호출_매핑_업서트_후_타임라인을_반환한다() {
+    void 위경도_입력시_파라미터를_빌드하여_KMA호출_후_슬롯을_엔티티로_업서트하고_DTO로_반환한다() {
         // given
         Double latitude = 37.5665;
         Double longitude = 126.9780;
 
+        WeatherLocationResponse locDto = new WeatherLocationResponse(
+            37.5665, 126.9780, 60, 127, java.util.List.of("서울특별시", "중구")
+        );
+        when(locationQueryService.getWeatherLocation(latitude, longitude)).thenReturn(locDto);
+
         WeatherLocation location = WeatherLocation.builder().build();
         location.setId(UUID.randomUUID());
-        location.setLatitude(BigDecimal.valueOf(latitude));
-        location.setLongitude(BigDecimal.valueOf(longitude));
-        location.setX(60);
-        location.setY(127);
-        location.setLocationNames("서울특별시 중구");
+        location.setX(60); location.setY(127);
+        when(locationRepository.findFirstByXAndY(60, 127)).thenReturn(Optional.of(location));
 
-        when(locationQueryService.findOrCreate(latitude, longitude)).thenReturn(location);
+        Map<String, String> params = new LinkedHashMap<>();
+        params.put("nx", "60"); params.put("ny", "127");
+        when(kmaRequestBuilder.toParams(eq(60), eq(127), any(Instant.class))).thenReturn(params);
 
-        KmaForecastResponse kmaResponse = mock(KmaForecastResponse.class);
-        when(forecastClient.getShortTermForecast(location)).thenReturn(kmaResponse);
+        KmaForecastResponse resp = new KmaForecastResponse();
+        resp.setItems(List.of(new KmaForecastItem())); // 더미
+        when(kmaClient.getVilageFcst(params)).thenReturn(resp);
 
-        Instant forecastAt1 = Instant.parse("2025-09-28T03:00:00Z");
-        Instant forecastAt2 = Instant.parse("2025-09-28T06:00:00Z");
-        Instant released1 = Instant.parse("2025-09-28T02:30:00Z");
-        Instant released2 = Instant.parse("2025-09-28T05:30:00Z");
+        KmaForecastMapper.Slot slot = new KmaForecastMapper.Slot(
+            "20250928","0900", SkyStatus.CLEAR, PrecipitationType.NONE, 22, 60, 10
+        );
+        when(kmaAssembler.toSlots(resp.getItems())).thenReturn(List.of(slot));
 
-        Weather w1 = Weather.builder()
+        Weather snapshot = Weather.builder()
             .location(location)
-            .forecastAt(forecastAt1)
-            .forecastedAt(released1)
+            .forecastAt(Instant.parse("2025-09-28T00:00:00Z"))
+            .forecastedAt(Instant.parse("2025-09-27T23:30:00Z"))
             .skyStatus(SkyStatus.CLEAR)
-            .asWord(WindStrength.MODERATE)
             .type(PrecipitationType.NONE)
-            .currentC(21.0)
+            .currentC(22.0)
             .probability(10.0)
             .build();
-
-        Weather w2 = Weather.builder()
-            .location(location)
-            .forecastAt(forecastAt2)
-            .forecastedAt(released2)
-            .skyStatus(SkyStatus.MOSTLY_CLOUDY)
-            .asWord(WindStrength.WEAK)
-            .type(PrecipitationType.NONE)
-            .currentC(23.0)
-            .probability(20.0)
-            .build();
-
-        when(forecastMapper.toEntities(kmaResponse, location)).thenReturn(Arrays.asList(w1, w2));
+        when(kmaAssembler.toWeathers(List.of(slot), location)).thenReturn(List.of(snapshot));
 
         when(weatherRepository.findByLocationIdAndForecastAtAndForecastedAt(
-            location.getId(), forecastAt1, released1)).thenReturn(Optional.empty());
-        when(weatherRepository.findByLocationIdAndForecastAtAndForecastedAt(
-            location.getId(), forecastAt2, released2)).thenReturn(Optional.empty());
-
+            location.getId(), snapshot.getForecastAt(), snapshot.getForecastedAt()
+        )).thenReturn(Optional.empty());
         when(weatherRepository.save(any(Weather.class))).thenAnswer(inv -> inv.getArgument(0));
+
+        WeatherSummaryDto dto = new WeatherSummaryDto(
+            UUID.randomUUID(), "CLEAR",
+            new PrecipitationDto("NONE", 0.0, 10.0),
+            new TemperatureDto(22.0, 0.0, 0.0, 0.0)
+        );
+        when(weatherMapper.toFeedWeatherDto(snapshot)).thenReturn(dto);
 
         // when
         List<WeatherSummaryDto> result = weatherService.getWeather(latitude, longitude);
 
         // then
-        verify(locationQueryService).findOrCreate(latitude, longitude);
-        verify(forecastClient).getShortTermForecast(location);
-        verify(forecastMapper).toEntities(kmaResponse, location);
-
-        // upsert(신규 2건 저장)
-        verify(weatherRepository, times(2)).save(weatherCaptor.capture());
-        List<Weather> saved = weatherCaptor.getAllValues();
-        assertThat(saved).hasSize(2);
-
-        // 반환 타임라인 검증
-        assertThat(result).hasSize(2);
-        assertThat(result.get(0).forecastAt()).isEqualTo(forecastAt1);
-        assertThat(result.get(1).forecastAt()).isEqualTo(forecastAt2);
+        verify(kmaClient).getVilageFcst(params);
+        verify(weatherRepository).save(any(Weather.class));
+        assertThat(result).hasSize(1);
+        assertThat(result.get(0).skyStatus()).isEqualTo("CLEAR");
     }
 
     @Test
-    void 동일_키가_이미_존재하면_저장은_생략하고_진행한다() {
+    void 동일_스냅샷이_이미_존재하면_저장을_생략하고_DTO만_반환한다() {
         // given
         Double latitude = 35.1796;
         Double longitude = 129.0756;
 
+        WeatherLocationResponse locDto = new WeatherLocationResponse(35.1796,129.0756,98,76, java.util.List.of());
+        when(locationQueryService.getWeatherLocation(latitude, longitude)).thenReturn(locDto);
+
         WeatherLocation location = WeatherLocation.builder().build();
         location.setId(UUID.randomUUID());
-        location.setLatitude(BigDecimal.valueOf(latitude));
-        location.setLongitude(BigDecimal.valueOf(longitude));
-        location.setX(98);
-        location.setY(76);
-        location.setLocationNames("부산광역시 중구");
+        location.setX(98); location.setY(76);
+        when(locationRepository.findFirstByXAndY(98, 76)).thenReturn(Optional.of(location));
 
-        when(locationQueryService.findOrCreate(latitude, longitude)).thenReturn(location);
+        Map<String, String> params = new LinkedHashMap<>();
+        when(kmaRequestBuilder.toParams(eq(98), eq(76), any(Instant.class))).thenReturn(params);
 
-        KmaForecastResponse kmaResponse = mock(KmaForecastResponse.class);
-        when(forecastClient.getShortTermForecast(location)).thenReturn(kmaResponse);
+        KmaForecastResponse resp = new KmaForecastResponse();
+        resp.setItems(List.of(new KmaForecastItem()));
+        when(kmaClient.getVilageFcst(params)).thenReturn(resp);
 
-        Instant forecastAt = Instant.parse("2025-09-28T09:00:00Z");
-        Instant released = Instant.parse("2025-09-28T08:40:00Z");
+        KmaForecastMapper.Slot slot = new KmaForecastMapper.Slot(
+            "20250928","1200", SkyStatus.MOSTLY_CLOUDY, PrecipitationType.NONE, 24, 55, 0
+        );
+        when(kmaAssembler.toSlots(resp.getItems())).thenReturn(List.of(slot));
 
-        Weather w = Weather.builder()
+        Weather snapshot = Weather.builder()
             .location(location)
-            .forecastAt(forecastAt)
-            .forecastedAt(released)
-            .skyStatus(SkyStatus.CLEAR)
-            .asWord(WindStrength.MODERATE)
+            .forecastAt(Instant.parse("2025-09-28T03:00:00Z"))
+            .forecastedAt(Instant.parse("2025-09-28T02:30:00Z"))
+            .skyStatus(SkyStatus.MOSTLY_CLOUDY)
             .type(PrecipitationType.NONE)
             .currentC(24.0)
-            .probability(5.0)
+            .probability(0.0)
             .build();
-
-        when(forecastMapper.toEntities(kmaResponse, location)).thenReturn(List.of(w));
+        when(kmaAssembler.toWeathers(List.of(slot), location)).thenReturn(List.of(snapshot));
 
         when(weatherRepository.findByLocationIdAndForecastAtAndForecastedAt(
-            location.getId(), forecastAt, released)).thenReturn(Optional.of(w));
+            location.getId(), snapshot.getForecastAt(), snapshot.getForecastedAt()
+        )).thenReturn(Optional.of(snapshot));
+
+        WeatherSummaryDto dto = new WeatherSummaryDto(
+            UUID.randomUUID(), "MOSTLY_CLOUDY",
+            new PrecipitationDto("NONE", 0.0, 0.0),
+            new TemperatureDto(24.0, 0.0, 0.0, 0.0)
+        );
+        when(weatherMapper.toFeedWeatherDto(snapshot)).thenReturn(dto);
 
         // when
         List<WeatherSummaryDto> result = weatherService.getWeather(latitude, longitude);
@@ -161,7 +165,6 @@ class WeatherServiceTest {
         // then
         verify(weatherRepository, never()).save(any(Weather.class));
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).forecastAt()).isEqualTo(forecastAt);
-        assertThat(result.get(0).forecastedAt()).isEqualTo(released);
+        assertThat(result.get(0).skyStatus()).isEqualTo("MOSTLY_CLOUDY");
     }
 }
